language/move-lang/tests/move_check/borrows/return_mutual_borrows_invalid.exp
error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/return_mutual_borrows_invalid.move:15:9
   │
14 │         let f = freeze(s1);
   │                 ---------- It is still being borrowed by this reference
15 │         (s1, f)
   │         ^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/return_mutual_borrows_invalid.move:19:9
   │
18 │         let f = &s1.f;
   │                 ----- Field 'f' is still being borrowed by this reference
19 │         (s1, f)
   │         ^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/return_mutual_borrows_invalid.move:23:9
   │
22 │         let f = &s1.f;
   │                 ----- It is still being borrowed by this reference
23 │         (&mut s1.f, f)
   │         ^^^^^^^^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/return_mutual_borrows_invalid.move:27:9
   │
26 │         let f = id(&s1.f);
   │                 --------- It is still being borrowed by this reference
27 │         (&mut s1.f, f)
   │         ^^^^^^^^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/return_mutual_borrows_invalid.move:31:9
   │
31 │         (s1, s1)
   │         ^^^^^^^^
   │         ││
   │         │It is still being mutably borrowed by this reference
   │         Invalid return of reference. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/return_mutual_borrows_invalid.move:35:9
   │
34 │         let f =  &mut s1.f;
   │                  --------- Field 'f' is still being mutably borrowed by this reference
35 │         (s1, f)
   │         ^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/return_mutual_borrows_invalid.move:38:9
   │
38 │         (&mut s1.f, s1)
   │         ^^^^^^^^^^^^^^^
   │         ││
   │         │Field 'f' is still being mutably borrowed by this reference
   │         Invalid return of reference. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/return_mutual_borrows_invalid.move:41:9
   │
41 │         (id_mut(s1), s1)
   │         ^^^^^^^^^^^^^^^^
   │         ││
   │         │It is still being mutably borrowed by this reference
   │         Invalid return of reference. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/return_mutual_borrows_invalid.move:45:9
   │
44 │         let f = id_mut(&mut s1.f);
   │                 ----------------- Field 'f' is still being mutably borrowed by this reference
45 │         (s1, f)
   │         ^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/return_mutual_borrows_invalid.move:48:9
   │
48 │         (id_mut(&mut s1.f), s1)
   │         ^^^^^^^^^^^^^^^^^^^^^^^
   │         ││
   │         │Field 'f' is still being mutably borrowed by this reference
   │         Invalid return of reference. Cannot transfer a mutable reference that is being borrowed

